add plc stations

--- a/warehouse_config_instance.json
+++ b/warehouse_config_instance.json
@@ -2,16 +2,13 @@
   "metadata": {
     "name": "warehouse_config",
     "created": "2025-08-07T01:45:18.718Z",
-    "version": "1.0.0",
-    "description": "Exported warehouse configuration"
+    "version": "2.0.0",
+    "description": "Enhanced warehouse configuration with PLC prezone"
   },
   "warehouse_parameters": {
-    "aisles": 6,
+    "aisles": 3,
     "levels_per_aisle": [
       10,
-      5,
-      3,
-            10,
       5,
       3
     ],
@@ -20,6 +17,229 @@
     "storage_depth": 2,
     "picking_stations": 3
   },
+  "prezone_visuals": {
+    "ellipse": {
+      "position": {
+        "x": 0,
+        "y": 0.0,
+        "z": -5.0
+      },
+      "dimensions": {
+        "radiusX": 20.0,
+        "radiusZ": 2.0
+      }
+    }
+  },
+  "plc_stations": [
+    {
+      "name": "Entry",
+      "position": {
+        "x": -15.0,
+        "y": 0.0,
+        "z": -2.0
+      },
+      "plc_address": 11400,
+      "directions": {
+        "straight": 11401,
+        "divert": null
+      }
+    },
+    {
+      "name": "Aisle 1 Entrance",
+      "position": {
+        "x": 3.225,
+        "y": 0.0,
+        "z": -2.0
+      },
+      "plc_address": 11500,
+      "directions": {
+        "straight": 11401,
+        "divert": 11600
+      }
+    },
+    {
+      "name": "Aisle 1 Lift",
+      "position": {
+        "x": 3.225,
+        "y": 1.0,
+        "z": 4.5
+      },
+      "plc_address": 11600,
+      "directions": {
+        "straight": null,
+        "divert": null
+      }
+    },
+    {
+      "name": "Picking Diverter 1",
+      "position": {
+        "x": -15.0,
+        "y": 0.0,
+        "z": -8.0
+      },
+      "plc_address": 11700,
+      "directions": {
+        "straight": null,
+        "divert": 11401
+      }
+    },
+    {
+      "name": "Picking Station 1",
+      "position": {
+        "x": -15.0,
+        "y": 0.0,
+        "z": -14.0
+      },
+      "plc_address": 11800,
+      "directions": {
+        "straight": 11700,
+        "divert": null
+      }
+    },
+    {
+      "name": "Picking Diverter 2",
+      "position": {
+        "x": -8.0,
+        "y": 0.0,
+        "z": -8.0
+      },
+      "plc_address": 11701,
+      "directions": {
+        "straight": 11401,
+        "divert": null
+      }
+    },
+    {
+      "name": "Picking Station 2",
+      "position": {
+        "x": -8.0,
+        "y": 0.0,
+        "z": -14.0
+      },
+      "plc_address": 11801,
+      "directions": {
+        "straight": 11701,
+        "divert": null
+      }
+    },
+    {
+      "name": "Picking Diverter 3",
+      "position": {
+        "x": -1.0,
+        "y": 0.0,
+        "z": -8.0
+      },
+      "plc_address": 11702,
+      "directions": {
+        "straight": 11401,
+        "divert": null
+      }
+    },
+    {
+      "name": "Picking Station 3",
+      "position": {
+        "x": -1.0,
+        "y": 0.0,
+        "z": -14.0
+      },
+      "plc_address": 11802,
+      "directions": {
+        "straight": 11702,
+        "divert": null
+      }
+    },
+    {
+      "name": "Aisle 2 Entrance",
+      "position": {
+        "x": 8.95,
+        "y": 0.0,
+        "z": -2.0
+      },
+      "plc_address": 11501,
+      "directions": {
+        "straight": 11601,
+        "divert": 11401
+      }
+    },
+    {
+      "name": "Aisle 2 Lift",
+      "position": {
+        "x": 8.95,
+        "y": 1.0,
+        "z": 4.5
+      },
+      "plc_address": 11601,
+      "directions": {
+        "straight": null,
+        "divert": null
+      }
+    },
+    {
+      "name": "Aisle 3 Entrance",
+      "position": {
+        "x": 14.65,
+        "y": 0.0,
+        "z": -2.0
+      },
+      "plc_address": 11502,
+      "directions": {
+        "straight": 11602,
+        "divert": 11401
+      }
+    },
+    {
+      "name": "Aisle 3 Lift",
+      "position": {
+        "x": 14.65,
+        "y": 1.0,
+        "z": 4.5
+      },
+      "plc_address": 11602,
+      "directions": {
+        "straight": null,
+        "divert": null
+      }
+    },
+    {
+      "name": "Aisle 1 Fill Reader",
+      "position": {
+        "x": 3.225,
+        "y": 1.0,
+        "z": 6
+      },
+      "plc_address": 11900,
+      "directions": {
+        "straight": null,
+        "divert": null
+      }
+    },
+    {
+      "name": "Aisle 2 Fill Reader",
+      "position": {
+        "x": 8.95,
+        "y": 1.0,
+        "z": 6
+      },
+      "plc_address": 11901,
+      "directions": {
+        "straight": null,
+        "divert": null
+      }
+    },
+    {
+      "name": "Aisle 3 Fill Reader",
+      "position": {
+        "x": 14.65,
+        "y": 1.0,
+        "z": 6
+      },
+      "plc_address": 11902,
+      "directions": {
+        "straight": null,
+        "divert": null
+      }
+    }
+  ],
   "missing_locations": [
     {
       "aisle": 2,
