--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --max-warnings=0",
+    "format": "prettier --write ."
   },
   "devDependencies": {
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "eslint": "^9.9.0",
+    "@eslint/js": "^9.9.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "prettier": "^3.3.3"
   },
   "dependencies": {
     "three": "^0.128.0"
