--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-  "lint": "eslint \"src/**/*.{js,jsx}\"",
-    "format": "prettier --write .",
-    "test": "vitest run"
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -18,8 +17,7 @@
     "eslint-plugin-jsdoc": "^48.0.0",
     "eslint-plugin-node": "^11.1.0",
     "prettier": "^3.3.3",
-    "vite": "^6.3.5",
-    "vitest": "^1.6.1"
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "three": "^0.128.0"
